--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -92,9 +92,9 @@
         }
 
         .video-modal {
-            width: 95%;
+            width: 100%;
             transform: rotate(0deg);
-            margin-bottom: $margen*2;
+            // margin-bottom: $margen*2;
 
             video {
                 width: 100%;
@@ -342,7 +342,7 @@ section .wrapper {
     }
 }
 
-.seccion-partida {
+.seccion-partida, .seccion-videoinfo {
     .wrapper {
         @include dt {
             display: flex;
