--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -2,7 +2,7 @@
 $gris-letras: #666666;
 $celeste-fondo: #40d1fa;
 $azul-fondo: #005b81;
-$fondo-body: #d8e8ef;
+$fondo-body: #b7daed;
 
 // Fuentes
 $font-rg: 'quattrocento-rg';
